slick responsive fixes- 1 slide on mobile, 2 on ipads, 3 on desktop

--- a/src/_assets/scss/main.scss
+++ b/src/_assets/scss/main.scss
@@ -992,7 +992,7 @@ a:hover {
 		}
 	}
 	.slick-list {
-		@include media-breakpoint-down(sm){
+		@include media-breakpoint-down(md){
 			padding: 0 10% 0 0;
 		}
 	}
